tests/compile-fail/integration__integration__strings__encoding_error_in_meta.snap
---
source: tests/integration/strings.rs
expression: stderr
---
error: string encoding error
  ┌─ <input>:7:17
  │
7 │     stage_name: "⏄",
  │                 ^^^ cannot be encoded using 'Shift_JIS'


